fixed up the navbar and added a custom scrollbar style

--- a/Pathway_pro/static/css/navbar.css
+++ b/Pathway_pro/static/css/navbar.css
@@ -1,59 +1,80 @@
+/* Resetting margin and padding */
+body, html {
+  margin: 0;
+  padding: 0;
+}
+
 /* Navbar */
 .navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #FFFFFF;
-    padding: 10px 0;
-    z-index: 1000;
-    text-align: center;
-  }
-  .navbar .logo {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-right: 48px;
-    float: left;
-  }
-  .navbar .nav-links {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    float: left;
-  }
-  .navbar .nav-links li {
-    margin-top: 29px;
-    display: inline-block;
-    margin-right: 20px;
-  }
-  .navbar .nav-links li:last-child {
-    margin-right: 0;
-  }
-  .navbar .nav-links li a {
-    color: #0099FF;
-    text-decoration: none;
-  }
-  .navbar .nav-links li a:hover{
-    color: #0088FF;
-    text-decoration: none;
-  }
-  .navbar .user-links {
-    list-style: none;
-    margin: 0;
-    padding-right: 30px;
-    float: right;
-  }
-  .navbar .user-links a {
-    display: inline-block;
-    padding: 10px 20px;
-    border: 2px solid;
-    border-radius: 5px;
-    border-shadow
-  }
-  .navbar .user-links a.login {
-    background-color: #f0f0f0; 
-  }
-  .navbar .user-links a.signup {
-    color: #333; 
-    background-color: #666; 
-  }
+  position: fixed;
+  top: 100;
+  left: 0;
+  width: 100%;
+  background-color: #FFFFFF;
+  padding: 10px 20px;
+  z-index: 1000;
+  text-align: center;
+  box-sizing: border-box;
+  margin: 0; /* Ensure no margin */
+}
+
+.navbar .logo {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-right: 48px;
+  float: left;
+}
+
+.navbar .nav-links {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  padding-top: 20px;
+  float: left;
+}
+
+.navbar .nav-links li {
+  margin-top: 10px;
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.navbar .nav-links li:last-child {
+  margin-right: 0;
+}
+
+.navbar .nav-links li a {
+  color: #0099FF;
+  text-decoration: none;
+}
+
+.navbar .nav-links li a:hover {
+  color: #0088FF;
+  text-decoration: none;
+}
+
+.navbar .user-links {
+  list-style: none;
+  margin: 0;
+  padding-right: 30px;
+  padding-top: 20px;
+  float: right;
+}
+
+.navbar .user-links a {
+  display: inline-block;
+  padding: 8px 16px;
+  border: 2px solid #0099FF;
+  border-radius: 5px;
+  color: #0099FF;
+  text-decoration: none;
+}
+
+.navbar .user-links a.login {
+  background-color: #f0f0f0;
+}
+
+.navbar .user-links a.signup {
+  color: #FFFFFF;
+  background-color: #0099FF;
+}
